[package]
name = "liquidity_pool"
version = "0.1.0"
description = "Custom AMM Liquidity Pool Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "liquidity_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
mainnet = []
devnet = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
sha2 = "0.10.0"