# programs/liquidity_pool/Cargo.toml
[package]
name = "liquidity_pool"
version = "0.1.0"
description = "Professional AMM Liquidity Pool Program - Prism Protocol"
edition = "2021"
repository = "https://github.com/prism-protocol-amm/prism-liquidity-pool"
license = "MIT"
keywords = ["solana", "amm", "defi", "liquidity", "pool"]
readme = "README.md"
homepage = "https://prismprotocol.fun"
documentation = "https://prismprotocol.fun/docs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["cdylib", "lib"]
name = "liquidity_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
mainnet = []
devnet = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0" }
sha2 = "0.10.0"
solana-security-txt = "1.1.1"
base64ct = "=1.6.0"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
tokio = { version = "1", features = ["full"] }